# QtTest

Clion/QtTest/: CMakeLists.txt  main.cpp
